@@ -1,3 +1,9 @@
+2002-04-02  jacob berkman  <jacob@ximian.com>
+
+	* service-edit-dialog.c (fill_dialog): show 'unknown' in the
+	protocol name for the unknown protocol
+	(validate_data): actually run and destroy the error dialogs
+
 2002-03-30  Jody Goldberg <jody@gnome.org>
 
 	* mime-edit-dialog.c (populate_component_list) : add some protection
